syntax = "proto3";

package resources.common.grpcws;

import "validate/validate.proto";

option go_package = "github.com/fivenet-app/fivenet/gen/go/proto/resources/common/grpcws;grpcws";

message GrpcFrame {
  uint32 streamId = 1;

  oneof payload {
    option (validate.required) = true;

    Ping ping = 3;
    Header header = 4;
    Body body = 5;
    Complete complete = 6;
    Failure failure = 7;
    Cancel cancel = 8;
  }
}

message Ping {
  bool pong = 1;
}

message Header {
  string operation = 1;
  map<string, HeaderValue> headers = 2;
  int32 status = 3;
}

message HeaderValue {
  repeated string value = 1;
}

message Body {
  bytes data = 1;
  bool complete = 2;
}

message Complete {}

message Failure {
  string error_message = 1;
  string error_status = 2;
  map<string, HeaderValue> headers = 3;
}

message Cancel {}
